--- a/CMakeSettings.json
+++ b/CMakeSettings.json
@@ -20,7 +20,19 @@
       "cmakeCommandArgs": "",
       "buildCommandArgs": "",
       "ctestCommandArgs": "",
-      "inheritEnvironments": [ "clang_cl_x64_x64" ]
+      "inheritEnvironments": [ "clang_cl_x64_x64" ],
+      "variables": [
+        {
+          "name": "ENABLE_QT_GUI",
+          "value": "True",
+          "type": "BOOL"
+        },
+        {
+          "name": "CMAKE_PREFIX_PATH",
+          "value": "C:/Qt/6.7.2/msvc2019_64",
+          "type": "PATH"
+        }
+      ]
     },
     {
       "name": "x64-Clang-RelWithDebInfo",
